--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,7 +21,14 @@ pipeline {
                 }
             }
         }
-        
+
+        stage ('Deploy Kubernetes') {
+            steps {
+                withKubeconfi ([credentialsId: 'kubeconfig']) {
+                    sh 'kubectl apply -f ./k8s/deployment.yaml'
+                }                
+            }
+        }
     }
 
 }
